# torchdyn

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  MANIFEST.in  README.md  pl-ci-reqs.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: codestyle.yml  os-coverage.yml  publish.yaml  pythonapp.yml  smoke_testing.yml  test-p.yaml  test-tutorials.yml  ubuntu-test.yml  validate-tutorials.yml
benchmark/RNODE/: regularized_cnf.ipynb  regularized_cnf_toy.ipynb
benchmark/density_2D/: toy_ffjord-diffeq.ipynb
benchmarks/: README.md  bench_mshooting.ipynb  bench_odeint.ipynb  gradcheck_tspan.ipynb
benchmarks/numerics/: bench_hypersolver.ipynb  bench_interpolation.ipynb  bench_mshooting-Copy1.ipynb  bench_mshooting.ipynb  bench_mshooting_forward.ipynb  bench_neuralde.ipynb  bench_odeint.ipynb  bench_stiff.ipynb  bench_symplectic.ipynb
benchmarks/tasks/: Untitled.ipynb
docs/: FAQ.ipynb  change_log.rst  conf.py  contributing.ipynb  contributing.rst  index.rst  requirements.txt  torchdyn.data_utils.rst  torchdyn.models.rst  torchdyn.rst  torchdyn_design.rst
docs/_templates/: menu.html  mob_menu.html
docs/source/: modules.rst  neuralode.rst  torchdyn.core.rst  torchdyn.datasets.rst  torchdyn.highlevel.rst  torchdyn.models.rst  torchdyn.nn.rst  torchdyn.numerics.rst  torchdyn.rst
docs/tutorials/: 00_quickstart.ipynb  01_neural_ode_cookbook.ipynb  02_classification.ipynb  03_crossing_trajectories.ipynb  04_augmentation_strategies.ipynb  05_integral_adjoint_wip.ipynb  06_hamiltonian_nn.ipynb  10_stable_neural_odes.ipynb  11_gde_node_classification.ipynb  quickstart.ipynb
examples/: latent_sde.py
requirements/: base.txt  docs.txt  external.txt
test/: conftest.py  continuous_normalizing_flows.ipynb  density_estimation_toy-Copy1.ipynb  density_estimation_toy.ipynb  ffjord.ipynb  ffjord_gif.ipynb  general_neural_de_tests.ipynb  higher_order_cookbook.ipynb  neural_sde.ipynb  run_tests.py  smoke_tests.py  stable_cookbook.ipynb  stable_cookbook_loc.ipynb  test_adjoint.py  test_datasets.py  test_dct.py  test_energy.py  test_flows.py  test_galerkin.py  test_higher_order.py  test_mshooting.ipynb  test_neural_de.py  test_neural_ode.py  test_neural_sde.py  test_normalizing_flows.py  test_ode_adjoint.py  test_problem.py  test_root_find.py  test_sdeint.py  test_sensitivity.py  test_utils.py  utils.py  validate_tutorials.py
test/benchmark/: 12_NeuralSDE.ipynb  NeuralSDE.ipynb  mnist.ipynb  toy_cnf.ipynb  toy_cnf_l.ipynb  toy_ffjord-diffeq.ipynb  toy_ffjord.ipynb
test/checkpoints/: ffjord_diffeqml
test/layers/: test_galerkin.py
test/models/: test_ode.py  test_sde.py
torchdyn/: __init__.py  _internals.py  adjoint.py  learner.py  plot.py  utils.py
torchdyn/core/: __init__.py  defunc.py  neuralde.py  problems.py  utils.py
torchdyn/data_utils/: static_datasets.py
torchdyn/datasets/: __init__.py  plot.py  static_datasets.py
torchdyn/experimental/: adadepth.py  utils.py
torchdyn/layers/: galerkin.py  utility.py
torchdyn/models/: README.md  __init__.py  _internals.py  adadepth.py  cnf.py  defunc.py  energy.py  flows.py  galerkin.py  hybrid.py  latent.py  neuralde.py  neuralsde.py  normflows.py  sdefunc  sdefunc.py  sdeutils.py  utils.py
torchdyn/nn/: __init__.py  galerkin.py  node_layers.py  util.py  utils.py
torchdyn/numerics/: __init__.py  _constants.py  adjoint.py  constants.py  hypersolvers.py  interpolators.py  odeint.py  odesolvers.py  root.py  sdeint.py  sensitivity.py  solvers.py  systems.py  utils.py
torchdyn/plot/: plot.py
torchdyn/sensitivity/: __init__.py  adjoint.py
torchdyn/seq/: hybrid.py  latent.py
torchdyn/transforms/: __init__.py  cosine.py
tutorials/: 00_quickstart.ipynb  01_neural_ode_cookbook.ipynb  01a_neural_ode_cookbook.ipynb  02_classification.ipynb  02_image_classification.ipynb  03_crossing_trajectories.ipynb  04_augmentation_strategies.ipynb  04_hypersolver_odeint.ipynb  04a_hypersolver_odeint.ipynb  04b_hypersolver_optimal_control.ipynb  04c_hybrid_odeint.ipynb  05_generalized_adjoint.ipynb  05_integral_adjoint.ipynb  05_integral_adjoint_wip.ipynb  06_continuous_normalizing_flows.ipynb  06_hamiltonian_nn.ipynb  06_higher_order.ipynb  06_higher_order_loc.ipynb  06a_hamiltonian_nets.ipynb  06b_Lagrangian_nn.ipynb  06b_lagrangian_nets.ipynb  06c_Forced_Lagrangian_nn.ipynb  07_ffjord.ipynb  07_graph_differential_equations.ipynb  07_graph_neural_de.ipynb  07_hamiltonian_nets.ipynb  07a_continuous_normalizing_flows.ipynb  07b_ffjord.ipynb  08_hamiltonian_nets.ipynb  08_lagrangian_nets.ipynb  08_lagrangian_nets_loc.ipynb  09_lagrangian_nets.ipynb  09_stable_neural_odes.ipynb  09_stable_neural_odes_gif.ipynb  09c_stable_neural_odes.ipynb  10_stable_neural_odes.ipynb  11_gde_node_classification.ipynb  11_gde_node_classification_PyG.py  11_stable_neural_odes.ipynb  12_Latent_SDE.py  (+7 more)
tutorials/experimental/: Optimal_Control.ipynb  gde_node_classification_pyg.py  latent_sde.py  m3c_optimal_control.ipynb  mshooting_solve.ipynb
tutorials/module1-neuralde/: 01_neural_ode_cookbook.ipynb  01b_crossing_trajectories.ipynb  01d_higher_order.ipynb  02_crossing_trajectories.ipynb  03_augmentation_strategies.ipynb  04_higher_order.ipynb  m1d_higher_order.ipynb  m1e_neural_sde_cookbook.ipynb
tutorials/module2-numerics/: 01_hypersolver_odeint.ipynb  02_hypersolver_odeint.ipynb  02_multiple_shooting.ipynb  03_hybrid_odeint.ipynb  04_generalized_adjoint.ipynb  05_generalized_adjoint.ipynb  m2a_hypersolver_odeint.ipynb  m2b_multiple_shooting.ipynb  m2c_hybrid_odeint.ipynb  m2d_generalized_adjoint.ipynb
tutorials/module3-tasks/: 07a_continuous_normalizing_flows.ipynb  m3a_image_classification.ipynb  m3c_continuous_normalizing_flows.ipynb  m3c_optimal_control.ipynb  m3d_pde_multiple_shooting.ipynb
tutorials/module4-model/: 07b_ffjord.ipynb  09a_hamiltonian_nets.ipynb  09c_stable_neural_odes.ipynb  m4a_approximate_continuous_normalizing_flows.ipynb  m4b.multiple_shooting_layers.ipynb  (+3 more)
(+20 files in other folders)
