[tool.poetry]
name = "torchdyn"
version = "1.0.1"
license = "Apache License, Version 2.0"
description = "A PyTorch library entirely dedicated to neural differential equations, implicit models and related numerical methods."
authors = ["Michael Poli", "Stefano Massaroli", "DiffEqML"]
packages = [
    {include = "torchdyn"}
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1"
torchsde="*"
torchcde="^0.2.3"
sklearn = "*"
pytorch-lightning = "*"
torchvision = "*"
scipy = "*"
matplotlib = "*"
ipykernel = "*"
ipywidgets = "*"
poethepoet = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
papermill = "*"
poethepoet = "^0.10.0"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.10.0+cu111 torchvision torchaudio -f https://download.pytorch.org/whl/torch_stable.html"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry", "wheel", "setuptools-cpp"]
