[tool.poetry]
name = "torchdyn"
version = "1.0.4"
license = "Apache License, Version 2.0"
description = "A PyTorch library entirely dedicated to neural differential equations, implicit models and related numerical methods."
authors = ["Michael Poli", "Stefano Massaroli", "DiffEqML"]
packages = [
    {include = "torchdyn"}
]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.8.1"
torchsde="*"
torchcde="^0.2.3"
scikit-learn = "*"
pytorch-lightning = "*"
torchvision = "*"
scipy = "*"
matplotlib = "*"
ipykernel = "*"
ipywidgets = "*"
poethepoet = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
papermill = "*"
poethepoet = "^0.10.0"

[tool.poe.tasks]
install-ltt = "python3 -m pip install light-the-torch"
run-ltt = "python3 -m light_the_torch install --upgrade torch torchaudio torchvision"
autoinstall-torch-cuda = ["install-ltt", "run-ltt"]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry", "wheel", "setuptools-cpp"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(message)s"

log_file = "pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

filterwarnings = [
        "ignore:Call to deprecated create function FieldDescriptor",  # pytorch lightning needs tensorboard which has a conflict with python 3.9
        "ignore:Call to deprecated create function Descriptor", # pytorch lightning needs tensorboard which has a conflict with python 3.9
        "ignore:Call to deprecated create function EnumDescriptor", # pytorch lightning needs tensorboard which has a conflict with python 3.9
        "ignore:Call to deprecated create function EnumValueDescriptor", # pytorch lightning needs tensorboard which has a conflict with python 3.9
        "ignore:Call to deprecated create function FileDescriptor", # pytorch lightning needs tensorboard which has a conflict with python 3.9
        "ignore:Call to deprecated create function OneofDescriptor", # pytorch lightning needs tensorboard which has a conflict with python 3.9
    ]
