[metadata]
name = torchdyn
description = PyTorch package for all things neural differential equations.
long_description = file: README.md
author = DiffEqML
author_email = polimic03@gmail.com, massaroli@robot.t.u-tokyo.ac.jp
url = https://github.com/DiffEqML/torchdyn
version = 0.2.0
license = Apache License, Version 2.0

CLASSIFIERS =
    Development Status :: Pre-alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers/Scientists
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =
    torch>=1.6.0
    pytorch-lightning>=0.8.4
    dgl>=0.4.1
    torchdiffeq>=0.0.1
    matplotlib
    torchvision
    scikit-learn

[options.extras_require]
all =
test =
    pytest

[options.package_data]
