[metadata]
name = torchdyn
description = PyTorch package for all things neural differential equations.
long_description = file: README.md
long_description_content_type= text/markdown
author = DiffEqML
author_email = polimic03@gmail.com, massaroli@robot.t.u-tokyo.ac.jp
url = https://github.com/DiffEqML/torchdyn
version = 0.2.2.1
license = Apache License, Version 2.0

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    torch>=1.6.0
    pytorch-lightning
    dgl
    torchdiffeq
    matplotlib
    torchvision
    scikit-learn
    torchsde @ http://github.com/google-research/torchsde/tarball/master#egg=torchsde-0.1.1

[options.extras_require]
all =
test =
    pytest

[options.package_data]
